Fix footnote spacing in print mode

--- a/assets/css/print.scss
+++ b/assets/css/print.scss
@@ -36,3 +36,8 @@ table {
 #header, #footer, #post-info, .permalink {
     display: none;
 }
+
+.footnotes {
+    font-size: 80%;
+    margin-top: 1cm;
+}
